# PyMyMC

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _typing.py  config.json  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
constants/: rpc.py  ui.py
pymymc/: __main__.py  app.py  config.py  launcher.py  log.py
pymymc/adapters/: mclib.py  minecraft.py  network.py
pymymc/constants/: __init__.py  ui.py
pymymc/i18n/: framework.py
pymymc/minecraft/: helpers.py  ports.py  versions.py
pymymc/objects/: version.py
pymymc/services/: discord.py
pymymc/ui/: config_dialog.py  config_dialogue.py  dialogs.py  dialogues.py  home_page.py  main_window.py  settings_page.py  version_manager.py  versions_page.py
