[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymymc"
version = "0.3.0"
description = "A lightweight Minecraft launcher GUI"
requires-python = ">=3.9"
dependencies = [
    "colorama",
    "minecraft_launcher_lib",
    "PyQt5>=5.15,<5.16",
    "requests",
]

[project.optional-dependencies]
build = ["nuitka"]

[tool.setuptools.packages.find]
include = ["pymymc*"]

[tool.setuptools.package-data]
pymymc = ["resources/*"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "T10", "C4", "B"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]
